<resources>
    <string name="app_name">DoctorBhai</string>
    <string name="google_map_key">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>


    <string-array name="medicine_descrip">

        <item>1111</item>
        <item>11</item>
        <item>11</item>
        <item>33</item>
        <item>44</item>
        <item>55</item>
        <item>66</item>
        <item>77</item>
        <item>88</item>

    </string-array>


    <string-array name="medicine_name">

        <item>Antacid</item>
        <item>Antacid</item>
        <item>ertettec</item>
        <item>Antacid</item>
        <item>Antacid</item>
        <item>Antacid</item>
        <item>Antacid</item>
        <item>Antacid</item>
        <item>Antacid</item>

    </string-array>


    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>


</resources>